--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0b465484",
+   "id": "ce6154d6",
    "metadata": {},
    "source": [
     "# Cleaning the Data"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "275d43e3",
+   "id": "11fec969",
    "metadata": {},
    "source": [
     "The goal here is to get our data in a format that we can use to make predictions. We want the target variable to be the outcome of the election in each state (percent that democrats/republicans won by), and to then have columns for other factors of interest (generic ballot, presidential approval, characteristics of the state, etc). "
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
-   "id": "916dffbc",
+   "execution_count": 351,
+   "id": "87ba4ac3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as  np\n",
+    "import numpy as np\n",
     "pd.options.display.max_columns = None\n",
     "%matplotlib inline\n",
     "import datetime as dt"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9bbcb9c",
+   "id": "b51e4607",
    "metadata": {},
    "source": [
     "## Senate Election Results "
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b65a70a3",
+   "id": "e96e71c6",
    "metadata": {},
    "source": [
     "Senate election data is taken from the MIT-Harvard Elections Data Science Lab. It can be accessed [here](https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/PEJ5QU)"
@@ -49,8 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
-   "id": "a99523e1",
+   "execution_count": 352,
+   "id": "4481d731",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
-   "id": "91547ad9",
+   "execution_count": 353,
+   "id": "c55f398a",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "4  total           10765      741210       False  20210114            OTHER  "
       ]
      },
-     "execution_count": 214,
+     "execution_count": 353,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,13 +254,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
-   "id": "6d1c4a3c",
+   "execution_count": 354,
+   "id": "6c6ba051",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#We will start by examining election data starting in 2008 as it the most recent. To keep our data simple and \n",
-    "#consistent, we will also ignore special elections. \n",
+    "#We will start by examining election data starting in 2002, as more recent elections are probably more relevant \n",
+    "to predicting this year's election.  To keep our data simple and consistent, we will also ignore special elections. \n",
     "small_results = senate_elections[(senate_elections['special'] == False) & (senate_elections['year'] >= 2002)]\n",
     "#California primaries result in the top two candidates advancing, regardless of party affiliation, so\n",
     "#two democrats often run against each other in the general. Consequently, we will drop california from our model. \n",
@@ -269,8 +269,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
-   "id": "401f2c77",
+   "execution_count": 355,
+   "id": "a7a1f02e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,8 +298,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
-   "id": "e831baea",
+   "execution_count": 356,
+   "id": "35b6ce44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,8 +319,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
-   "id": "53aaf63a",
+   "execution_count": 357,
+   "id": "f13f6d6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,8 +337,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
-   "id": "dc2ad26e",
+   "execution_count": 358,
+   "id": "ad91eb35",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "31   WEST VIRGINIA  2020       -0.432838      -0.122024"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 358,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a78d55b",
+   "id": "243d852f",
    "metadata": {},
    "source": [
     "## Generic Ballot"
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecacf17c",
+   "id": "8aebbe29",
    "metadata": {},
    "source": [
     "For the national generic ballot, we will use the average of generic ballot polling for the few weeks preceding the election. The data can be accessed on the Real Clear Politics website [here](https://www.realclearpolitics.com/epolls/other/2020_generic_congressional_vote-6722.html#polls) and on the Center for Politics website [here](https://centerforpolitics.org/crystalball/articles/the-key-to-forecasting-midterms-the-generic-ballot/). "
@@ -644,8 +644,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
-   "id": "0faf55d3",
+   "execution_count": 359,
+   "id": "6fd903f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,8 +664,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
-   "id": "fc751fb5",
+   "execution_count": 360,
+   "id": "4a36d59d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3ccffe4",
+   "id": "4d84106c",
    "metadata": {},
    "source": [
     "## Presidential Approval Score"
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2b5fda2",
+   "id": "78691518",
    "metadata": {},
    "source": [
     "For presidential approval polilng, we will use data from University of California Santa Barbara's American Presidency Project. The data all comes from Gallup polling, and is available [here](https://www.presidency.ucsb.edu/statistics/data)."
@@ -693,8 +693,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
-   "id": "1676ed45",
+   "execution_count": 361,
+   "id": "f4c42952",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,8 +708,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
-   "id": "930d58aa",
+   "execution_count": 362,
+   "id": "2b224e48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,8 +718,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
-   "id": "d8fb2817",
+   "execution_count": 363,
+   "id": "ec9bef27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,8 +728,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
-   "id": "d9200b31",
+   "execution_count": 364,
+   "id": "9017eb8e",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
        "[841 rows x 7 columns]"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 364,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,8 +919,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
-   "id": "9d8cafeb",
+   "execution_count": 365,
+   "id": "5247f2fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,8 +930,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
-   "id": "823bb202",
+   "execution_count": 366,
+   "id": "46077dbd",
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1047,7 @@
        "302         -14  "
       ]
      },
-     "execution_count": 227,
+     "execution_count": 366,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,8 +1058,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
-   "id": "deea8bc6",
+   "execution_count": 367,
+   "id": "3d69f61f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68f66b18",
+   "id": "157258b8",
    "metadata": {},
    "source": [
     "## State Unemployment Rates"
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e08ade79",
+   "id": "e4110398",
    "metadata": {},
    "source": [
     "For state unemployment rates, we will use data from the Bureau of Labor Statistics. It is available for 2020 [here](https://www.bls.gov/lau/lastrk20.htm) and for 2022 [here](https://www.bls.gov/web/laus/laumstrk.htm). Iowa State University collected the BLS data from earlier years into a nice spreadsheet available [here](https://www.icip.iastate.edu/tables/employment/unemployment-states). "
@@ -1092,8 +1092,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
-   "id": "18d9203e",
+   "execution_count": 368,
+   "id": "29cc997c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,8 +1102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
-   "id": "99afff1b",
+   "execution_count": 369,
+   "id": "b48e176e",
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1419,7 @@
        "4   7.5   6.2   5.5   4.8   4.2  "
       ]
      },
-     "execution_count": 230,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1430,8 +1430,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
-   "id": "910a6cf1",
+   "execution_count": 370,
+   "id": "1a908383",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,8 +1441,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
-   "id": "017a0ce0",
+   "execution_count": 371,
+   "id": "6854b2c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1452,8 +1452,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
-   "id": "bd8f0105",
+   "execution_count": 372,
+   "id": "9eacb16c",
    "metadata": {},
    "outputs": [
     {
@@ -1781,7 +1781,7 @@
        "4   7.5   6.2   5.5   4.8   4.2  10.2   4.1  "
       ]
      },
-     "execution_count": 233,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1792,8 +1792,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
-   "id": "eca00bb9",
+   "execution_count": 373,
+   "id": "2dc202c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1809,8 +1809,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
-   "id": "f47bb99f",
+   "execution_count": 374,
+   "id": "1cfb2227",
    "metadata": {},
    "outputs": [
     {
@@ -2371,7 +2371,7 @@
        "31             5.3  "
       ]
      },
-     "execution_count": 235,
+     "execution_count": 374,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2382,7 +2382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "586d419f",
+   "id": "2471712b",
    "metadata": {},
    "source": [
     "## Race and Ethnicity"
@@ -2390,7 +2390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53aa864b",
+   "id": "ef997968",
    "metadata": {},
    "source": [
     "For race and ethnicity data, I downloaded data from the CDC's Bridged-Race Population Estimates. The data is available [here](https://wonder.cdc.gov/controller/datarequest/D178)."
@@ -2398,8 +2398,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
-   "id": "a86be07d",
+   "execution_count": 375,
+   "id": "02cedcc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2408,8 +2408,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
-   "id": "0b25d1f3",
+   "execution_count": 376,
+   "id": "42f9168f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2418,8 +2418,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
-   "id": "7ba58520",
+   "execution_count": 377,
+   "id": "8544de7d",
    "metadata": {},
    "outputs": [
     {
@@ -2529,7 +2529,7 @@
        "4  1994.0                          1994.0     18566.0  "
       ]
      },
-     "execution_count": 275,
+     "execution_count": 377,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2540,8 +2540,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
-   "id": "566c0cbc",
+   "execution_count": 378,
+   "id": "aac47e4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2550,8 +2550,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
-   "id": "d5ae4df7",
+   "execution_count": 379,
+   "id": "27b5480c",
    "metadata": {},
    "outputs": [
     {
@@ -2630,7 +2630,7 @@
        "4  Alabama  1994.0  American Indian or Alaska Native     18566.0"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 379,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2641,8 +2641,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
-   "id": "ed57a1ef",
+   "execution_count": 380,
+   "id": "94e13051",
    "metadata": {},
    "outputs": [
     {
@@ -2669,8 +2669,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
-   "id": "ddf2607b",
+   "execution_count": 381,
+   "id": "a42e447c",
    "metadata": {},
    "outputs": [
     {
@@ -2683,7 +2683,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 381,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2694,8 +2694,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
-   "id": "22334a41",
+   "execution_count": 382,
+   "id": "9eeb1ada",
    "metadata": {},
    "outputs": [
     {
@@ -2736,7 +2736,7 @@
        "Name: year, dtype: int64"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2747,8 +2747,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
-   "id": "a312e1bd",
+   "execution_count": 383,
+   "id": "97d91e87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2757,8 +2757,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
-   "id": "6bc9f25b",
+   "execution_count": 384,
+   "id": "a9c0751b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2767,8 +2767,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
-   "id": "4ab1ef0f",
+   "execution_count": 385,
+   "id": "68602646",
    "metadata": {},
    "outputs": [
     {
@@ -2847,7 +2847,7 @@
        "4  Alabama  1994  American Indian or Alaska Native     18566.0"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2858,8 +2858,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
-   "id": "226e8c29",
+   "execution_count": 386,
+   "id": "c2d395e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2882,8 +2882,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
-   "id": "f1ccbeb7",
+   "execution_count": 387,
+   "id": "b4e75d44",
    "metadata": {},
    "outputs": [
     {
@@ -3030,7 +3030,7 @@
        "4             0.0          0.004503    0.662591    0.030587  "
       ]
      },
-     "execution_count": 329,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3041,7 +3041,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10c0952a",
+   "id": "eebcdb96",
    "metadata": {},
    "source": [
     "## Combining all the Data!"
@@ -3049,7 +3049,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cc8db39",
+   "id": "b3c5bce3",
    "metadata": {},
    "source": [
     "Now, I will combine the data from multiple election years to form the data set I will use to train and test our model. For now, I will combine the data for elections from 2008-2020."
@@ -3057,8 +3057,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
-   "id": "0e20993c",
+   "execution_count": 388,
+   "id": "a8f94da4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3071,8 +3071,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
-   "id": "2262a5ba",
+   "execution_count": 389,
+   "id": "5ab021f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3081,8 +3081,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
-   "id": "5711bc15",
+   "execution_count": 390,
+   "id": "205994f5",
    "metadata": {},
    "outputs": [
     {
@@ -3346,7 +3346,7 @@
        "[218 rows x 13 columns]"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 390,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3357,12 +3357,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
-   "id": "77c66f44",
+   "execution_count": 391,
+   "id": "d1463935",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# combined_elections.to_csv('combined_election_data.csv')"
+    "# combined_elections.to_csv('combined_election_data.csv', index=False)"
    ]
   }
  ],
